@@ -1,11 +1,11 @@
 {
-  "count": 36,
-  "uniques": 15,
+  "count": 34,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-05-17T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
