@@ -1,3 +1,10 @@
+2022-05-31T16:29:39Z:
+* notice: last 14d: unq all: 14 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 404 2113 / 428 2149
+* notice: next accum: outdated-unq outdated-all / unq all: 404 2113 / 427 2147
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +2 +4 -1 -3 / 1 1
+* notice: removed / changed dates: [] / [2022-05-17]
+
 2022-05-31T08:27:37Z:
 * notice: last 14d: unq all: 15 36
 * notice: prev accum: outdated-unq outdated-all / unq all: 404 2113 / 426 2148
